--- a/lessons/04-mongo/catapp/package.json
+++ b/lessons/04-mongo/catapp/package.json
@@ -11,6 +11,8 @@
     "debug": "~2.2.0",
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
+    "kerberos": "0.0.18",
+    "mongoose": "^4.4.2",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
