--- a/lessons/06-css-development-style/twotter/package.json
+++ b/lessons/06-css-development-style/twotter/package.json
@@ -12,6 +12,7 @@
     "express": "~4.13.1",
     "express-handlebars": "^2.0.1",
     "express-session": "^1.13.0",
+    "mongoose": "^4.4.10",
     "morgan": "~1.6.1",
     "serve-favicon": "~2.3.0"
   }
